--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-    info: master branch,springcloud-config/confi-dev.yml version=1
+    info: test branch,springcloud-config/confi-dev.yml version=1
