--- a/config-test.yml
+++ b/config-test.yml
@@ -1,2 +1,2 @@
 config:
-    info: master branch,springcloud-config/confi-test.yml version=1
+    info: test branch,springcloud-config/confi-test.yml version=1
